--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.10.1",
     "@pinia/nuxt": "latest",
     "@vitejs/plugin-vue": "^4.4.1",
     "mitt": "^3.0.1",
     "pinia": "latest",
-    "typescript": "^5.3.3",
     "sass-loader": "^13.3.2",
+    "typescript": "^5.3.3",
     "vue3-carousel-nuxt": "^1.1.0"
   },
   "devDependencies": {
@@ -23,10 +24,13 @@
     "@pinia-plugin-persistedstate/nuxt": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-plugin-vue": "^9.19.2",
     "nuxt": "latest",
+    "postcss": "^8.4.32",
     "sass": "^1.69.5",
+    "tailwindcss": "^3.3.6",
     "vue": "latest",
     "vue-router": "^4.2.5"
   }
