--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
-  "types": [
-    "pinia-plugin-persist"
-  ]
-//  "include": [
-//    "./types/index.d.ts"
-//  ],
+  // "types": [
+  // "pinia-plugin-persist"
+  // ]
+  //  "include": [
+  //    "./types/index.d.ts"
+  //  ],
 }
