--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vitejs/plugin-vue": "^4.4.1",
     "mitt": "^3.0.1",
     "pinia": "latest",
+    "prettier": "^3.1.1",
     "sass-loader": "^13.3.2",
     "typescript": "^5.3.3",
     "vue3-carousel-nuxt": "^1.1.0"
@@ -29,6 +30,7 @@
     "eslint-plugin-vue": "^9.19.2",
     "nuxt": "latest",
     "postcss": "^8.4.32",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.6",
     "vue": "latest",
