--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "kasia-swiezak",
   "type": "module",
   "scripts": {
     "build": "nuxt build",
@@ -9,31 +9,31 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.10.1",
-    "@pinia/nuxt": "latest",
-    "@vitejs/plugin-vue": "^4.4.1",
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@pinia/nuxt": "^0.5.1",
+    "@vitejs/plugin-vue": "^4.6.2",
     "mitt": "^3.0.1",
-    "pinia": "latest",
-    "prettier": "^3.1.1",
-    "sass-loader": "^13.3.2",
-    "typescript": "^5.3.3",
+    "pinia": "^2.1.7",
+    "prettier": "^3.2.5",
+    "sass-loader": "^13.3.3",
+    "typescript": "^5.4.2",
     "vue3-carousel-nuxt": "^1.1.0"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^1.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
-    "@pinia-plugin-persistedstate/nuxt": "^1.1.2",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.55.0",
-    "eslint-plugin-vue": "^9.19.2",
-    "nuxt": "latest",
-    "postcss": "^8.4.32",
-    "prettier-plugin-tailwindcss": "^0.5.9",
-    "sass": "^1.69.5",
-    "tailwindcss": "^3.3.6",
-    "vue": "latest",
-    "vue-router": "^4.2.5"
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.23.0",
+    "nuxt": "3.11.1",
+    "postcss": "^8.4.37",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "sass": "^1.72.0",
+    "tailwindcss": "^3.4.1",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   }
 }
